--- a/Index.html
+++ b/Index.html
@@ -18,18 +18,23 @@
 <main>
     <h4>EtileThePro Is The Best</h4>
 </main>
-<footer>
-    <hr>
-    author: EtileThePro
-    &copy; copyright reserved
-</footer>
-
 
     <h1>This is The Website of <a href="Https://youtube.com/@EtileThePro" target="_blank"> EtileThePro </a>  </h1>
     <h2> Subscribe To EtileThePro On Youtube</h2>
+    <h2>Make Sure To Like The Video I Posted About This Website It Took Hours Of Code To Make This</h2>
     <p> <b>This Website WIll Continue To Be Worked On Throughout The Future</b> </p>
 <a href="Https://youtube.com/@EtileThePro" target="_blank">
     <img src="download.jpeg" alt="Subscribe To My Youtube Channel">
+    </a>
+
+    <footer style="background-color: darkgray;">
+        <h3>
+        author: EtileThePro
+        </h3>
+        <h5>
+        &copy; copyright reserved
+        </h5>
+    </footer>
 </a>
 </body>
 </html>
