--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 <meta name="viewport" content="device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <header style="color: darkgray;">
+    <header>
     <h1>How To Contact Me</h1>
 </header style="color: darkgray;">
 <title>CONTACT ME</title>
@@ -12,9 +12,9 @@
 <body>
     <header style="background-color: darkgray;">
         <h1>Contact Me</h1>
-        <a href="file:///media/removable/MicroSD/Website/Index.html" target="_blank"> Home </a>
-        <a href="file:///media/removable/MicroSD/Website/About%20Me.html" target="_blank"> About Me </a>
-        <a href="file:///media/removable/MicroSD/Website/Contact.html" target="_blank">Contact Me</a>
+        <a href="https://etilethepro.github.io/EtileThePro/Index.html" target="_blank"> Home </a>
+        <a href="https://etilethepro.github.io/AboutMeEtile/About%20Me.html" target="_blank"> About Me </a>
+        <a href="https://etilethepro.github.io/Contact-Me/Contact.html">Contact Me</a>
         <hr>
     </header>
     <h1>EMAIL FOR BUISNESS USE ONLY</h1>
