--- a/Index.html
+++ b/Index.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="device-width, initial-scale=1">
-<title>EtileThePro Website</title>
-<link rel="stylesheet " href="style.css">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="device-width, initial-scale=1">
+    <title>EtileThePro Website</title>
+    <link rel="stylesheet " href="style.css">
+
+
 </head>
 
 <body>
-<header style="background-color: darkgray;">
-    <h1>Welcome To My Website</h1>
-    <a href="https://etilethepro.github.io/EtileThePro/Index.html"> Home </a>
-    <a href="https://etilethepro.github.io/AboutMeEtile/About%20Me.html" target="_blank"> About Me </a>
-    <a href="https://etilethepro.github.io/Contact-Me/Contact.html" target="_blank">Contact Me</a>
-    <hr>
-</header>
-<main>
-    <h4>EtileThePro Is The Best</h4>
-</main>
+    <header style="background-color: darkgray;">
+        <h1>Welcome To My Website</h1>
+        <a href="https://etilethepro.github.io/EtileThePro/Index.html"> Home </a>
+        <a href="https://etilethepro.github.io/AboutMeEtile/About%20Me.html" target="_blank"> About Me </a>
+        <a href="https://etilethepro.github.io/Contact-Me/Contact.html" target="_blank">Contact Me</a>
+        <hr>
+    </header>
 
-    <h1>This is The Website of <a href="Https://youtube.com/@EtileThePro" target="_blank"> EtileThePro </a>  </h1>
+
+    <main>
+        <h4>EtileThePro Is The Best</h4>
+    </main>
+
+    <h1>This is The Website of <a href="Https://youtube.com/@EtileThePro" target="_blank"> EtileThePro </a> </h1>
     <h2> Subscribe To EtileThePro On Youtube</h2>
     <h2>Make Sure To Like The Video I Posted About This Website It Took Hours Of Code To Make This</h2>
     <p> <b>This Website WIll Continue To Be Worked On Throughout The Future</b> </p>
-<a href="Https://youtube.com/@EtileThePro" target="_blank">
-    <img src="download.jpeg" alt="Subscribe To My Youtube Channel">
     </a>
+    <video width="300px" controls muted loop autoplay>
+<source src="Introduction.mp4" type="video/mp4">
+<source src="Introduction.webm" type="video/webm">
+    </video>
 
     <footer style="background-color: darkgray;">
         <h3>
-        author: EtileThePro
+            author: EtileThePro
         </h3>
         <h5>
-        &copy; copyright reserved
+            &copy; copyright reserved
         </h5>
     </footer>
-</a>
+    </a>
 </body>
+
 </html>
